@@ -1,3 +1,7 @@
+2010-07-27  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gtext.R: fix insert method and scroll to end
+
 2010-07-26  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gtree.R (isStillThere): Change to index=TRUE in svalue. No
